# Dentiny

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  addappointmentwindow.cpp  addappointmentwindow.h  addappointmentwindow.ui  addpatientwindow.cpp  addpatientwindow.h  addpatientwindow.ui  addreportwindow.cpp  addreportwindow.h  addreportwindow.ui  appointment.cpp  appointment.h  appointmentdao.cpp  appointmentdao.h  appointmentitem.cpp  appointmentitem.h  appointmentitem.ui  appointmentmodel.cpp  appointmentmodel.h  appointmentobserver.cpp  appointmentobserver.h  attachment.cpp  attachment.h  attachmentdao.cpp  attachmentdao.h  attachmentmodel.cpp  attachmentmodel.h  authenticationwindow.cpp  authenticationwindow.h  authenticationwindow.ui  credentialdao.cpp  credentialdao.h  credentialmodel.cpp  credentialmodel.h  dbmanager.cpp  dbmanager.h  dentinydb.db  (+51 more)
SmtpClient/: CMakeLists.txt
sql/: schema.sql
